--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ a{
     justify-content: space-between;
 }
 .logo{
-    width: 30%;
+    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +37,7 @@ a{
     margin-top: 20px;
 }
 .nav-btns{
-    width: 70%;
+    /* width: 60%; */
     display: flex;
     justify-content: center;
     align-items: center;  
@@ -128,11 +128,11 @@ a{
     justify-content: space-between;
 }
 .sale-itembox{
-    /* width: 60%; */
     height: 70vh;
     display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 50px auto;
-
 }
 
 .sale-imgbox{
@@ -144,12 +144,16 @@ a{
 }
 .sale-content{
     width: 40%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin:0 30px;
 }
 .sale-content h1{
+    /* text-decoration: underline; */
+    width: fit-content;
+    border-bottom: 2px solid #000;
     font-size: 3.5rem;
     font-weight: 400;
     margin: 10px 0;
@@ -207,9 +211,7 @@ a{
     justify-content: center;
 }
 .rent-itembox{
-    /* width: 40%; */
     margin: 50px 25px;
-    cursor: pointer;
 }
 .rent-imgbox{
     height: 50%;
@@ -227,9 +229,10 @@ a{
     margin: 10px 0;
 }
 .rent-content h1{
+    width: fit-content;
+    border-bottom: 1.8px solid #000;
     font-weight: 400;
     font-size: 2rem;
-    text-decoration: underline;
 }
 .rent-content p{
     font-size: 18px;
@@ -242,7 +245,6 @@ a{
     font-size: 1.25rem;
     font-weight: 500;
     color: #33cccc;
-    /* margin: 0 auto 20px; */
 }
 
 /* TESTIMONIAL */
@@ -285,7 +287,9 @@ a{
 
 /* FOOTER */
 .footer{
-    /* display: flex; */
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color:#323644;
     color: #9396A2;
@@ -299,17 +303,14 @@ a{
     color: #9396A2;
 
 }
-.footer>p{
-    margin-top: -220px;
-    padding-left: 10px;
-    letter-spacing: 1px;
-}
+
 .footer h2{
     font-weight: 400;
     font-size: 1.3rem;
 }
 .contact-details{
-    margin: 100px auto;
+    width: 45%;
+    margin: 100px auto 20px;
 }
 .detail-box{
     display: flex;
@@ -318,33 +319,37 @@ a{
 }
 
 .contact-form{
-    margin: 100px auto;
+    width: 45%;
+    margin: 100px auto 20px;
 }
 form{
-    height: 150px;
-    width: 350px;
+    height: 60%;
+    width: 90%;
     margin: 30px 0;
 }
 .footer-form{
-    height: 80%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 .left-form{
     height: 100%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 10px 0;
+    margin: 0 10px 0 0;
+    
 }
 .right-form{
     height: 100%;
-    margin: 10px 0;
+    width: 45%;
+    
 }
 .left-form input{
-    width: 150px;
-    height: 30px;
+    width: 100%;
+    height: 30%;
     outline: none;
     border: 1px solid #9396A2;
     background: transparent;
@@ -357,13 +362,13 @@ form{
 textarea{
     color: #9396A2;
     height: 100%;
-    padding-top:10px ;
+    width: 100%;
     background: transparent;
     resize: none;
 }
 .submit-btn{
     float: right;
-    margin: 30px 0;
+    margin: 10px 0;
     background-color: transparent;
     outline: none;
     border: none;
@@ -371,20 +376,24 @@ textarea{
     font-weight: 500;
     cursor: pointer;
 }
+.footer-copyright{
+    margin: 10px auto;
+    
+}
 
 /* agent page */
 
 .agent-box{
     width: 100%;
     background-image: url(https://img.freepik.com/free-photo/beautiful-landscape-view-ocean_23-2149119440.jpg?t=st=1708798968~exp=1708802568~hmac=8c5f01d2cba73f8275307460309407c1d2bbafbd83bb320d32fe9014f2fb280b&w=740);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    backdrop-filter: brightness(80%);
+   
 }
 .agent-heading h1{
     font-weight: 500;
@@ -403,7 +412,7 @@ textarea{
     height: 100vh;
     background-color:#fff ;
     margin: 50px 15px;
-    /* height: 80vh; */
+
 }
 .agent-imgbox{
     height: 50%;
@@ -420,7 +429,9 @@ textarea{
 .agent-content h1{
     font-weight: 500;
     font-size: 1.5rem;
-    text-decoration: underline;
+    width: fit-content;
+    border-bottom: 1.5px solid #000;
+    
 }
 .agent-content h2{
     font-size: 18px;
@@ -435,11 +446,3 @@ textarea{
     font-family: "Nunito", sans-serif;
 
 }
-
-/* /////////////////////////////////////////////////// */
-/* @media screen and (max-width:700px) {
-    .sale-itembox{
-        flex-direction:column ;
-    }
-    
-} */
