--- a/public/responsive.css
+++ b/public/responsive.css
@@ -1,6 +1,48 @@
 /* Header responsiveness */
 
-/* Hero section */
+/* for medium devices */
+@media screen and (max-width:1024px) {
+    .header-link{
+        padding: 0 20px;
+    }
+
+
+
+    .sale-mainbox .custom-link {
+        width: 75%;
+    }
+    .sale-itembox{
+        height: 60vh;
+    }
+    .sale-img{
+        /* width: 300px; */
+    }
+    .sale-content h1{
+        margin-top: 0;
+        font-size: 2.5rem;
+    }
+    .sale-content p{
+        font-size: 14px;
+    }
+    .sale-content button{
+        width: 120px;
+        height: 35px;
+        font-size: 14px;
+        font-weight: 400;
+        margin-top: 10px;
+    }
+    
+}
+@media screen and (max-width:1024px) and (min-height:1200px){
+    .sale-itembox{
+        height: 30vh;
+    }
+}
+
+
+
+
+/* for small devices */
 @media screen and (max-width:460px) {
     .header{
         height: 50px;
