--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,7 @@ a{
     background-color: #f0f0f0;
 }
 .sale-box>h1{
+    font-size: 3rem;
     text-align: center;
     font-weight: 400;
     
@@ -137,6 +138,7 @@ a{
 
 .sale-imgbox{
    height: 100%;
+   margin: 0 15px;
 }
 .sale-img{
     height: 100%;
@@ -148,28 +150,27 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin:0 30px;
+    margin:0 15px;
 }
 .sale-content h1{
-    /* text-decoration: underline; */
     width: fit-content;
     border-bottom: 2px solid #000;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     font-weight: 400;
     margin: 10px 0;
     white-space: pre-line;
 
 }
 .sale-content h2{
-    font-size: 1.2rem;
+    font-size: 1.8rem;
 }
 .sale-content p{
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 300;
     font-family: "Nunito", sans-serif;
 }
 .sale-content h3{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: 500;
     color: #33cccc;
 }
@@ -200,6 +201,7 @@ a{
     background-color: #fff;
 }
 .rent-heading h1{
+    font-size: 3rem;
     font-weight: 400;
     margin-top: 100px;
 }
@@ -224,7 +226,7 @@ a{
 }
 
 .rent-content h2{
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 500;
     margin: 10px 0;
 }
@@ -232,24 +234,25 @@ a{
     width: fit-content;
     border-bottom: 1.8px solid #000;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 .rent-content p{
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 300;
     font-family: "Nunito", sans-serif;
     margin: 20px 0;
 
 }
 .rent-content h3{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: 500;
     color: #33cccc;
 }
 
 /* TESTIMONIAL */
 .testimonial-box{
-    height: 80vh;
+    height: max-content;
+    padding: 0 0 50px;
     background-image: url(https://images.pexels.com/photos/15170508/pexels-photo-15170508/free-photo-of-empty-beach-and-sea-at-dusk.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     background-size:cover;
     background-repeat: no-repeat;
@@ -274,7 +277,7 @@ a{
     
 }
 .testimonial-item p{
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 300;
     font-family: "Nunito", sans-serif;
     margin: 20px 0;
@@ -287,7 +290,7 @@ a{
 
 /* FOOTER */
 .footer{
-    height: 70vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -297,6 +300,7 @@ a{
 .footer-mainbox{
     width: 100%;
     height: 100%;
+    padding: 0 0 50px;
     display: flex;
     justify-content: center;
     background-color:#323644;
@@ -306,7 +310,7 @@ a{
 
 .footer h2{
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 .contact-details{
     width: 45%;
@@ -409,19 +413,9 @@ textarea{
 }
 .agent-itembox{
     width: 30%;
-    height: 100vh;
     background-color:#fff ;
     margin: 50px 15px;
 
-}
-.agent-imgbox{
-    height: 50%;
-    width: 100%;
-   
-}
-.agent-img{
-    height: 100%;
-    width: 100%;
 }
 .agent-content{
     padding: 20px;
