--- a/public/responsive.css
+++ b/public/responsive.css
@@ -7,7 +7,9 @@
     }
 
 
-
+    .sale-box>h1{
+        font-size: 3rem;
+    }
     .sale-mainbox .custom-link {
         width: 75%;
     }
@@ -21,8 +23,14 @@
         margin-top: 0;
         font-size: 2.5rem;
     }
+    .sale-content h2{
+        font-size: 1.3rem;
+    }
+    .sale-content h3{
+        font-size: 1.5rem;
+    }
     .sale-content p{
-        font-size: 14px;
+        font-size: 1rem;
     }
     .sale-content button{
         width: 120px;
@@ -31,6 +39,24 @@
         font-weight: 400;
         margin-top: 10px;
     }
+
+
+    /* rent-box */
+    .rent-heading h1{
+        font-size: 3rem;
+    }
+    .rent-content h1{
+        font-size: 2.5rem;
+    }
+    .rent-content h2{
+        font-size: 1.5rem;
+    }
+    .rent-content h3{
+        font-size: 1.8rem;
+    }
+    .rent-content p{
+        font-size: 1.2rem;
+    }
     
 }
 @media screen and (max-width:1024px) and (min-height:1200px){
@@ -38,6 +64,78 @@
         height: 30vh;
     }
 }
+
+@media screen and (max-width:768px) {
+    .sale-box>h1{
+        font-size: 2.5rem;
+    }
+
+
+    .sale-content h1{
+        font-size: 2rem;
+    }
+    .sale-content h2{
+        font-size: 1.2rem;
+    }
+    .sale-content h3{
+        font-size: 1.2rem;
+    }
+    .sale-content p{
+        font-size: 1rem;
+    }
+    .sale-content button{
+        width: 120px;
+        height: 30px;
+    }
+
+     /* rent-box */
+    .rent-heading h1{
+        font-size: 2.5rem;
+    }
+    .rent-content h1{
+        font-size: 2rem;
+    }
+    .rent-content h2{
+        font-size: 1.2rem;
+    }
+    .rent-content h3{
+        font-size: 1.2rem;
+    }
+    .rent-content p{
+        font-size: 1rem;
+    }
+    .rent-content button{
+        height: 30px;
+        width: 120px;
+        font-size: 14px;
+
+        font-weight: 400;
+    }
+
+    /* testimonial-box */
+    .testimonial-item p{
+        font-size: 1rem;
+
+    }
+
+    /* agent-box */
+    .agent-mainbox{
+        width: 80%;
+    }
+    .agent-itembox{
+        width: 40%;
+    }
+}
+
+@media screen and (max-width:768px) and (min-width:460px) {
+    .sale-content h1{
+        font-size: 1.8rem;
+    }
+    .sale-content p{
+        /* font-size: 1rem; */
+    }
+}
+
 
 
 
@@ -124,7 +222,6 @@
 
     }
     .sale-content h1{
-        width: 50%;
         font-size: 2rem;
     }
     .sale-content h2{
@@ -134,7 +231,8 @@
         font-size: 14px;
     }
     .sale-content h3{
-        padding-top: 20px;
+        font-size: 1.2rem;
+        padding-top: 10px;
     }
 
 
@@ -166,7 +264,6 @@
 
     }
     .rent-content h1{
-        width: 50%;
         font-size: 2rem;
     }
     .rent-content h2{
@@ -218,6 +315,7 @@
 
 
     .contact-details{
+        width: 80%;
         margin: 20px 40px;
     }
     .detail-box{
@@ -228,6 +326,7 @@
     }
 
     .contact-form{
+        width: 80%;
         margin: 20px 40px;
     }
     form{
@@ -242,15 +341,20 @@
         width: 100%;
     }
     .left-form input{
+        height: 30px;
         width: 100%;
+        margin: 5px 0;
        
     }
   
     .right-form{
+        width: 100%;
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
     }
     textarea{
+        height: 60px;
         width: 100%;
         
     }
@@ -267,7 +371,6 @@
 
     .agent-itembox{
         width: 100%;
-        height: 80vh;
         margin: 20px auto;
     }
     .agent-imgbox{
