--- a/public/style.css
+++ b/public/style.css
@@ -417,6 +417,11 @@ textarea{
     margin: 50px 15px;
 
 }
+.agent-img{
+    height: 100%;
+    width: 100%;
+    aspect-ratio: 1/1;
+}
 .agent-content{
     padding: 20px;
 }
